# hello_world_app_py

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: main.py
src/hello/: hello.py
tests/: test_hello.py  test_integration.py
